# hackathon-v-research-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  secrets.json
.claude/skills/a2a-protocol/: SKILL.md
.claude/skills/claude-agent-sdk/: SKILL.md
.claude/skills/content-analyzer/: SKILL.md
.claude/skills/dapr-workflow/: SKILL.md
.claude/skills/fact-checker/: SKILL.md
.claude/skills/fastapi-service/: SKILL.md
.claude/skills/kafka-setup/: SKILL.md
.claude/skills/kubernetes-deploy/: SKILL.md
.specify/memory/: constitution.md
evals/: golden_dataset.yaml  run_evals.py
kubernetes/: deployment.yaml
kubernetes/dapr/: pubsub.yaml  secrets.yaml  statestore.yaml
kubernetes/kafka/: topics.yaml
kubernetes/sandbox/: sandbox-pool.yaml  sandbox.yaml
skills/content-analyzer/: SKILL.md
skills/fact-checker/: SKILL.md
skills/report-writer/: SKILL.md
skills/research-planner/: SKILL.md
skills/source-finder/: SKILL.md
specs/001-research-analyst-fte/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: config.py
src/agents/: claude_agent_wrapper.py  coordinator.py  guardrails.py  simple_agents.py
src/api/: main.py
src/models/: __init__.py  report.py  research.py  task.py
src/tools/: pdf_export.py  web_search.py
src/workflows/: activities.py  research_workflow.py
tests/: conftest.py
tests/contract/: test_a2a.py
tests/integration/: test_api.py  test_workflow.py
tests/unit/: test_activities.py  test_guardrails.py  test_models.py
(+21 files in other folders)
